--- a/src/assets/css/fonts.css
+++ b/src/assets/css/fonts.css
@@ -1,107 +1,279 @@
-
 /* roboto-300 - latin */
 @font-face {
-     font-family: 'Roboto';
-     font-style: normal;
-     font-weight: 300;
-     src: url('/fonts/roboto-v20-latin-300.eot'); /* IE9 Compat Modes */
-     src: local(''),
-          url('/fonts/roboto-v20-latin-300.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-          url('/fonts/roboto-v20-latin-300.woff2') format('woff2'), /* Super Modern Browsers */
-          url('/fonts/roboto-v20-latin-300.woff') format('woff'), /* Modern Browsers */
-          url('/fonts/roboto-v20-latin-300.ttf') format('truetype'), /* Safari, Android, iOS */
-          url('/fonts/roboto-v20-latin-300.svg#Roboto') format('svg'); /* Legacy iOS */
-   }
-   /* roboto-regular - latin */
-   @font-face {
-     font-family: 'Roboto';
-     font-style: normal;
-     font-weight: 400;
-     src: url('/fonts/roboto-v20-latin-regular.eot'); /* IE9 Compat Modes */
-     src: local(''),
-          url('/fonts/roboto-v20-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-          url('/fonts/roboto-v20-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
-          url('/fonts/roboto-v20-latin-regular.woff') format('woff'), /* Modern Browsers */
-          url('/fonts/roboto-v20-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
-          url('/fonts/roboto-v20-latin-regular.svg#Roboto') format('svg'); /* Legacy iOS */
-   }
-   /* roboto-italic - latin */
-   @font-face {
-     font-family: 'Roboto';
-     font-style: italic;
-     font-weight: 400;
-     src: url('/fonts/roboto-v20-latin-italic.eot'); /* IE9 Compat Modes */
-     src: local(''),
-          url('/fonts/roboto-v20-latin-italic.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-          url('/fonts/roboto-v20-latin-italic.woff2') format('woff2'), /* Super Modern Browsers */
-          url('/fonts/roboto-v20-latin-italic.woff') format('woff'), /* Modern Browsers */
-          url('/fonts/roboto-v20-latin-italic.ttf') format('truetype'), /* Safari, Android, iOS */
-          url('/fonts/roboto-v20-latin-italic.svg#Roboto') format('svg'); /* Legacy iOS */
-   }
-   /* roboto-500 - latin */
-   @font-face {
-     font-family: 'Roboto';
-     font-style: normal;
-     font-weight: 500;
-     src: url('/fonts/roboto-v20-latin-500.eot'); /* IE9 Compat Modes */
-     src: local(''),
-          url('/fonts/roboto-v20-latin-500.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-          url('/fonts/roboto-v20-latin-500.woff2') format('woff2'), /* Super Modern Browsers */
-          url('/fonts/roboto-v20-latin-500.woff') format('woff'), /* Modern Browsers */
-          url('/fonts/roboto-v20-latin-500.ttf') format('truetype'), /* Safari, Android, iOS */
-          url('/fonts/roboto-v20-latin-500.svg#Roboto') format('svg'); /* Legacy iOS */
-   }
-   /* roboto-500italic - latin */
-   @font-face {
-     font-family: 'Roboto';
-     font-style: italic;
-     font-weight: 500;
-     src: url('/fonts/roboto-v20-latin-500italic.eot'); /* IE9 Compat Modes */
-     src: local(''),
-          url('/fonts/roboto-v20-latin-500italic.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-          url('/fonts/roboto-v20-latin-500italic.woff2') format('woff2'), /* Super Modern Browsers */
-          url('/fonts/roboto-v20-latin-500italic.woff') format('woff'), /* Modern Browsers */
-          url('/fonts/roboto-v20-latin-500italic.ttf') format('truetype'), /* Safari, Android, iOS */
-          url('/fonts/roboto-v20-latin-500italic.svg#Roboto') format('svg'); /* Legacy iOS */
-   }
-   /* roboto-700 - latin */
-   @font-face {
-     font-family: 'Roboto';
-     font-style: normal;
-     font-weight: 700;
-     src: url('/fonts/roboto-v20-latin-700.eot'); /* IE9 Compat Modes */
-     src: local(''),
-          url('/fonts/roboto-v20-latin-700.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-          url('/fonts/roboto-v20-latin-700.woff2') format('woff2'), /* Super Modern Browsers */
-          url('/fonts/roboto-v20-latin-700.woff') format('woff'), /* Modern Browsers */
-          url('/fonts/roboto-v20-latin-700.ttf') format('truetype'), /* Safari, Android, iOS */
-          url('/fonts/roboto-v20-latin-700.svg#Roboto') format('svg'); /* Legacy iOS */
-   }
-   /* roboto-700italic - latin */
-   @font-face {
-     font-family: 'Roboto';
-     font-style: italic;
-     font-weight: 700;
-     src: url('/fonts/roboto-v20-latin-700italic.eot'); /* IE9 Compat Modes */
-     src: local(''),
-          url('/fonts/roboto-v20-latin-700italic.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-          url('/fonts/roboto-v20-latin-700italic.woff2') format('woff2'), /* Super Modern Browsers */
-          url('/fonts/roboto-v20-latin-700italic.woff') format('woff'), /* Modern Browsers */
-          url('/fonts/roboto-v20-latin-700italic.ttf') format('truetype'), /* Safari, Android, iOS */
-          url('/fonts/roboto-v20-latin-700italic.svg#Roboto') format('svg'); /* Legacy iOS */
-   }
-
+    font-family: "Roboto";
+    font-style: normal;
+    font-weight: 300;
+    src: url("/fonts/roboto-v20-latin-300.eot"); /* IE9 Compat Modes */
+    src: local(""),
+        url("/fonts/roboto-v20-latin-300.eot?#iefix")
+            format("embedded-opentype"),
+        /* IE6-IE8 */ url("/fonts/roboto-v20-latin-300.woff2") format("woff2"),
+        /* Super Modern Browsers */ url("/fonts/roboto-v20-latin-300.woff")
+            format("woff"),
+        /* Modern Browsers */ url("/fonts/roboto-v20-latin-300.ttf")
+            format("truetype"),
+        /* Safari, Android, iOS */ url("/fonts/roboto-v20-latin-300.svg#Roboto")
+            format("svg"); /* Legacy iOS */
+}
+/* roboto-regular - latin */
+@font-face {
+    font-family: "Roboto";
+    font-style: normal;
+    font-weight: 400;
+    src: url("/fonts/roboto-v20-latin-regular.eot"); /* IE9 Compat Modes */
+    src: local(""),
+        url("/fonts/roboto-v20-latin-regular.eot?#iefix")
+            format("embedded-opentype"),
+        /* IE6-IE8 */ url("/fonts/roboto-v20-latin-regular.woff2")
+            format("woff2"),
+        /* Super Modern Browsers */ url("/fonts/roboto-v20-latin-regular.woff")
+            format("woff"),
+        /* Modern Browsers */ url("/fonts/roboto-v20-latin-regular.ttf")
+            format("truetype"),
+        /* Safari, Android, iOS */
+            url("/fonts/roboto-v20-latin-regular.svg#Roboto") format("svg"); /* Legacy iOS */
+}
+/* roboto-italic - latin */
+@font-face {
+    font-family: "Roboto";
+    font-style: italic;
+    font-weight: 400;
+    src: url("/fonts/roboto-v20-latin-italic.eot"); /* IE9 Compat Modes */
+    src: local(""),
+        url("/fonts/roboto-v20-latin-italic.eot?#iefix")
+            format("embedded-opentype"),
+        /* IE6-IE8 */ url("/fonts/roboto-v20-latin-italic.woff2")
+            format("woff2"),
+        /* Super Modern Browsers */ url("/fonts/roboto-v20-latin-italic.woff")
+            format("woff"),
+        /* Modern Browsers */ url("/fonts/roboto-v20-latin-italic.ttf")
+            format("truetype"),
+        /* Safari, Android, iOS */
+            url("/fonts/roboto-v20-latin-italic.svg#Roboto") format("svg"); /* Legacy iOS */
+}
+/* roboto-500 - latin */
+@font-face {
+    font-family: "Roboto";
+    font-style: normal;
+    font-weight: 500;
+    src: url("/fonts/roboto-v20-latin-500.eot"); /* IE9 Compat Modes */
+    src: local(""),
+        url("/fonts/roboto-v20-latin-500.eot?#iefix")
+            format("embedded-opentype"),
+        /* IE6-IE8 */ url("/fonts/roboto-v20-latin-500.woff2") format("woff2"),
+        /* Super Modern Browsers */ url("/fonts/roboto-v20-latin-500.woff")
+            format("woff"),
+        /* Modern Browsers */ url("/fonts/roboto-v20-latin-500.ttf")
+            format("truetype"),
+        /* Safari, Android, iOS */ url("/fonts/roboto-v20-latin-500.svg#Roboto")
+            format("svg"); /* Legacy iOS */
+}
+/* roboto-500italic - latin */
+@font-face {
+    font-family: "Roboto";
+    font-style: italic;
+    font-weight: 500;
+    src: url("/fonts/roboto-v20-latin-500italic.eot"); /* IE9 Compat Modes */
+    src: local(""),
+        url("/fonts/roboto-v20-latin-500italic.eot?#iefix")
+            format("embedded-opentype"),
+        /* IE6-IE8 */ url("/fonts/roboto-v20-latin-500italic.woff2")
+            format("woff2"),
+        /* Super Modern Browsers */
+            url("/fonts/roboto-v20-latin-500italic.woff") format("woff"),
+        /* Modern Browsers */ url("/fonts/roboto-v20-latin-500italic.ttf")
+            format("truetype"),
+        /* Safari, Android, iOS */
+            url("/fonts/roboto-v20-latin-500italic.svg#Roboto") format("svg"); /* Legacy iOS */
+}
+/* roboto-700 - latin */
+@font-face {
+    font-family: "Roboto";
+    font-style: normal;
+    font-weight: 700;
+    src: url("/fonts/roboto-v20-latin-700.eot"); /* IE9 Compat Modes */
+    src: local(""),
+        url("/fonts/roboto-v20-latin-700.eot?#iefix")
+            format("embedded-opentype"),
+        /* IE6-IE8 */ url("/fonts/roboto-v20-latin-700.woff2") format("woff2"),
+        /* Super Modern Browsers */ url("/fonts/roboto-v20-latin-700.woff")
+            format("woff"),
+        /* Modern Browsers */ url("/fonts/roboto-v20-latin-700.ttf")
+            format("truetype"),
+        /* Safari, Android, iOS */ url("/fonts/roboto-v20-latin-700.svg#Roboto")
+            format("svg"); /* Legacy iOS */
+}
+/* roboto-700italic - latin */
+@font-face {
+    font-family: "Roboto";
+    font-style: italic;
+    font-weight: 700;
+    src: url("/fonts/roboto-v20-latin-700italic.eot"); /* IE9 Compat Modes */
+    src: local(""),
+        url("/fonts/roboto-v20-latin-700italic.eot?#iefix")
+            format("embedded-opentype"),
+        /* IE6-IE8 */ url("/fonts/roboto-v20-latin-700italic.woff2")
+            format("woff2"),
+        /* Super Modern Browsers */
+            url("/fonts/roboto-v20-latin-700italic.woff") format("woff"),
+        /* Modern Browsers */ url("/fonts/roboto-v20-latin-700italic.ttf")
+            format("truetype"),
+        /* Safari, Android, iOS */
+            url("/fonts/roboto-v20-latin-700italic.svg#Roboto") format("svg"); /* Legacy iOS */
+}
 
 /* yeseva-one-regular - latin */
 @font-face {
-     font-family: 'Yeseva One';
-     font-style: normal;
-     font-weight: 400;
-     src: url('/fonts/yeseva-one-v15-latin-regular.eot'); /* IE9 Compat Modes */
-     src: local(''),
-          url('/fonts/yeseva-one-v15-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-          url('/fonts/yeseva-one-v15-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
-          url('/fonts/yeseva-one-v15-latin-regular.woff') format('woff'), /* Modern Browsers */
-          url('/fonts/yeseva-one-v15-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
-          url('/fonts/yeseva-one-v15-latin-regular.svg#YesevaOne') format('svg'); /* Legacy iOS */
-   }
+    font-family: "Yeseva One";
+    font-style: normal;
+    font-weight: 400;
+    src: url("/fonts/yeseva-one-v15-latin-regular.eot"); /* IE9 Compat Modes */
+    src: local(""),
+        url("/fonts/yeseva-one-v15-latin-regular.eot?#iefix")
+            format("embedded-opentype"),
+        /* IE6-IE8 */ url("/fonts/yeseva-one-v15-latin-regular.woff2")
+            format("woff2"),
+        /* Super Modern Browsers */
+            url("/fonts/yeseva-one-v15-latin-regular.woff") format("woff"),
+        /* Modern Browsers */ url("/fonts/yeseva-one-v15-latin-regular.ttf")
+            format("truetype"),
+        /* Safari, Android, iOS */
+            url("/fonts/yeseva-one-v15-latin-regular.svg#YesevaOne")
+            format("svg"); /* Legacy iOS */
+}
+
+/* my fonts */
+@font-face {
+    font-family: "Noto Serif Hebrew";
+    src: url("/fonts/NotoSerifHebrew-Bold.eot");
+    src: url("/fonts/NotoSerifHebrew-Bold.eot?#iefix")
+            format("embedded-opentype"),
+        url("/fonts/NotoSerifHebrew-Bold.woff2") format("woff2"),
+        url("/fonts/NotoSerifHebrew-Bold.woff") format("woff"),
+        url("/fonts/NotoSerifHebrew-Bold.ttf") format("truetype"),
+        url("/fonts/NotoSerifHebrew-Bold.svg#NotoSerifHebrew-Bold")
+            format("svg");
+    font-weight: bold;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: "Noto Serif Hebrew";
+    src: url("/fonts/NotoSerifHebrew-Black.eot");
+    src: url("/fonts/NotoSerifHebrew-Black.eot?#iefix")
+            format("embedded-opentype"),
+        url("/fonts/NotoSerifHebrew-Black.woff2") format("woff2"),
+        url("/fonts/NotoSerifHebrew-Black.woff") format("woff"),
+        url("/fonts/NotoSerifHebrew-Black.ttf") format("truetype"),
+        url("/fonts/NotoSerifHebrew-Black.svg#NotoSerifHebrew-Black")
+            format("svg");
+    font-weight: 900;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: "Noto Serif Hebrew";
+    src: url("/fonts/NotoSerifHebrew-ExtraBold.eot");
+    src: url("/fonts/NotoSerifHebrew-ExtraBold.eot?#iefix")
+            format("embedded-opentype"),
+        url("/fonts/NotoSerifHebrew-ExtraBold.woff2") format("woff2"),
+        url("/fonts/NotoSerifHebrew-ExtraBold.woff") format("woff"),
+        url("/fonts/NotoSerifHebrew-ExtraBold.ttf") format("truetype"),
+        url("/fonts/NotoSerifHebrew-ExtraBold.svg#NotoSerifHebrew-ExtraBold")
+            format("svg");
+    font-weight: bold;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: "Noto Serif Hebrew";
+    src: url("/fonts/NotoSerifHebrew-Thin.eot");
+    src: url("/fonts/NotoSerifHebrew-Thin.eot?#iefix")
+            format("embedded-opentype"),
+        url("/fonts/NotoSerifHebrew-Thin.woff2") format("woff2"),
+        url("/fonts/NotoSerifHebrew-Thin.woff") format("woff"),
+        url("/fonts/NotoSerifHebrew-Thin.ttf") format("truetype"),
+        url("/fonts/NotoSerifHebrew-Thin.svg#NotoSerifHebrew-Thin")
+            format("svg");
+    font-weight: 100;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: "Noto Serif Hebrew";
+    src: url("/fonts/NotoSerifHebrew-Light.eot");
+    src: url("/fonts/NotoSerifHebrew-Light.eot?#iefix")
+            format("embedded-opentype"),
+        url("/fonts/NotoSerifHebrew-Light.woff2") format("woff2"),
+        url("/fonts/NotoSerifHebrew-Light.woff") format("woff"),
+        url("/fonts/NotoSerifHebrew-Light.ttf") format("truetype"),
+        url("/fonts/NotoSerifHebrew-Light.svg#NotoSerifHebrew-Light")
+            format("svg");
+    font-weight: 300;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: "Noto Serif Hebrew";
+    src: url("/fonts/NotoSerifHebrew-Regular.eot");
+    src: url("/fonts/NotoSerifHebrew-Regular.eot?#iefix")
+            format("embedded-opentype"),
+        url("/fonts/NotoSerifHebrew-Regular.woff2") format("woff2"),
+        url("/fonts/NotoSerifHebrew-Regular.woff") format("woff"),
+        url("/fonts/NotoSerifHebrew-Regular.ttf") format("truetype"),
+        url("/fonts/NotoSerifHebrew-Regular.svg#NotoSerifHebrew-Regular")
+            format("svg");
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: "Noto Serif Hebrew";
+    src: url("/fonts/NotoSerifHebrew-SemiBold.eot");
+    src: url("/fonts/NotoSerifHebrew-SemiBold.eot?#iefix")
+            format("embedded-opentype"),
+        url("/fonts/NotoSerifHebrew-SemiBold.woff2") format("woff2"),
+        url("/fonts/NotoSerifHebrew-SemiBold.woff") format("woff"),
+        url("/fonts/NotoSerifHebrew-SemiBold.ttf") format("truetype"),
+        url("/fonts/NotoSerifHebrew-SemiBold.svg#NotoSerifHebrew-SemiBold")
+            format("svg");
+    font-weight: 600;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: "Noto Serif Hebrew";
+    src: url("/fonts/NotoSerifHebrew-Medium.eot");
+    src: url("/fonts/NotoSerifHebrew-Medium.eot?#iefix")
+            format("embedded-opentype"),
+        url("/fonts/NotoSerifHebrew-Medium.woff2") format("woff2"),
+        url("/fonts/NotoSerifHebrew-Medium.woff") format("woff"),
+        url("/fonts/NotoSerifHebrew-Medium.ttf") format("truetype"),
+        url("/fonts/NotoSerifHebrew-Medium.svg#NotoSerifHebrew-Medium")
+            format("svg");
+    font-weight: 500;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: "Noto Serif Hebrew";
+    src: url("/fonts/NotoSerifHebrew-ExtraLight.eot");
+    src: url("/fonts/NotoSerifHebrew-ExtraLight.eot?#iefix")
+            format("embedded-opentype"),
+        url("/fonts/NotoSerifHebrew-ExtraLight.woff2") format("woff2"),
+        url("/fonts/NotoSerifHebrew-ExtraLight.woff") format("woff"),
+        url("/fonts/NotoSerifHebrew-ExtraLight.ttf") format("truetype"),
+        url("/fonts/NotoSerifHebrew-ExtraLight.svg#NotoSerifHebrew-ExtraLight")
+            format("svg");
+    font-weight: 200;
+    font-style: normal;
+    font-display: swap;
+}
